--- a/src/chrome/skin/passhash-dialog.css
+++ b/src/chrome/skin/passhash-dialog.css
@@ -40,7 +40,7 @@ textbox.saved
 
 #hash-word
 {
-	font-family: fixed, monospace;
+	font-family: fixed, monospace;;
 	font-weight: normal;
 	min-height: 4em;
 	-moz-appearance: menupopup;
@@ -58,4 +58,59 @@ textbox.saved
 .info[disabled]
 {
 	cursor: help;
+}
+
+#requirementsGroup > vbox
+{
+	display: grid;
+}
+#restrictPunctuation
+{
+	margin: 0 0 0 2.5em;
+	display: flex;
+	max-width: 15em;
+	flex-wrap: wrap;
+}
+#restrictPunctuation > checkbox
+{
+	-moz-appearance: none;
+	cursor: pointer;
+	padding: 0 0.1em 0 0;
+	margin: 0;
+	width: 1.5em;
+	height: 1.5em;
+	text-align: center;
+	font-family: "Fira Mono", "DejaVu Sans Mono", Menlo, Consolas, "Liberation Mono", Monaco, "Lucida Console", monospace;
+	color: gray;
+	outline: 1px solid gray;
+	background-color: silver;
+	box-shadow: 0 0 0.5em gray;
+}
+#restrictPunctuation > checkbox:not([disabled]):hover
+{
+	background-color: DimGray;
+	color: white;
+}
+#restrictPunctuation > checkbox:not([disabled])[checked]:hover
+{
+	background-color: #69B955;
+	color: white;
+}
+#restrictPunctuation > checkbox .checkbox-check
+{
+	display: none;
+}
+
+#restrictPunctuation > checkbox[checked]:not([_checked]),
+#restrictPunctuation > checkbox[_checked="true"]
+{
+	background-color: #9EE09E;
+	color: black;
+	box-shadow: 0 0 0.5em silver;
+}
+#restrictPunctuation[disabled] > checkbox
+{
+	opacity: 0.5;
+	cursor: initial;
+	pointer-events: none;
 }
