--- a/src/chrome/skin/password.css
+++ b/src/chrome/skin/password.css
@@ -3,6 +3,7 @@
 textbox[type="password"]
 {
 	-moz-binding: url("chrome://passhash/content/bindings/password.xml#password-textbox");
+	width: 100%;
 }
 
 textbox[type="password"] .textbox-password-show
@@ -18,4 +19,8 @@ textbox[type="password"] .textbox-password-show:hover
 textbox[type="password"][show] .textbox-password-show
 {
 	opacity: 0.6;
+}
+label
+{
+	white-space: pre;
 }
